# rabbitmq-messaging-patterns

./: README.md  pyproject.toml
multi-producer-single-consumer/: consumer.py  producer1.py  producer2.py  setup.py
