[tool.poetry]
name = "rabbitmq-messaging-patterns"
version = "0.1.0"
description = "Playground to work with rabbitmq messaging patterns"
authors = ["Shishir Biyyala <shishir.biyyala@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pika = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"